<resources>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_upload_image">UploadImageActivity</string>
    <string name="done">Done</string>
    <string name="select">select</string>
    <string name="camera">camera</string>
    <string name="gallery">Gallery</string>
    <string name="file">File</string>
</resources>